--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 header {
@@ -91,7 +92,9 @@ footer {
 .slideshow-container {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
     top: -60px;
     left: -40px;
     margin-bottom: 0;
@@ -184,4 +187,12 @@ button:hover {
     max-width: 100%;
     height: auto;
     border-radius: 10px;
+}
+@media (max-width: 768px){
+    .home{
+        height: auto;
+    }
+    .slide{
+        height: 50vh;
+    }
 }
