--- a/public/styles.css
+++ b/public/styles.css
@@ -197,6 +197,22 @@ button:hover {
         height: 50vh;
     }
 }
+.map-container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio */
+}
+
+.map-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
 /*pop up styling*/
 .popup {
     display: none;
@@ -237,4 +253,3 @@ button {
 button:hover {
     background-color: #d87a00;
 }
-
