--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;;
 }
 
 header {
@@ -87,7 +88,7 @@ footer {
     width: 100%;
     height: 100vh; /* Full-screen height */
     overflow: hidden;
-    background-position: left top;
+    background-position: center;
 }
 
 .slideshow-container {
@@ -108,6 +109,8 @@ footer {
     position: absolute;
     width: 100%;
     height: 100%;
+    align-items: center;
+    justify-content: center;
     background-size: cover;
     background-position: center;
     opacity: 0;
@@ -125,6 +128,12 @@ footer {
     padding: 20px;
     border-radius: 10px;
     z-index: 2;
+}
+@media (min-width:768px){
+    .overlay{
+        max-width: 250px;
+        bottom: 15%;
+    }
 }
 
 button {
@@ -149,8 +158,8 @@ button:hover {
     align-items: center;
     padding: 20px 50px;
     background-color: #f9f9f9;
-    width: 100%;
-    margin-top: -90px;/* Reduces the unwanted space*/
+    width: 90%;
+    margin-top: -200px;/* Reduces the unwanted space*/
 }
 
 .about-content {
@@ -220,13 +229,15 @@ button:hover {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 300px;
+    width: 90%;/*Responsive Width*/
+    max-width: 350px;
     background: white;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
     border-radius: 8px;
     z-index: 1000;
+    overflow: hidden;
 }
 
 .popup-content {
