--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,8 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden;;
+    overflow-x: hidden;
+    width:100%
 }
 
 header {
@@ -116,6 +117,7 @@ footer {
     opacity: 0;
     transition: opacity 1s ease-in-out;
 }
+ 
 
 .overlay {
     position: absolute;
