--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,4 @@
+/*Body styling*/
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -6,7 +7,7 @@ body {
     overflow-x: hidden;
     width:100%
 }
-
+/*Header Styling*/
 header {
     background: #333;
     color: white;
@@ -61,7 +62,7 @@ footer {
     position: relative;
 }
 
-/* Modal Styling */
+/* Modal Styling for Sign In and Sign Up*/
 .modal {
     display: none;
     position: fixed;
@@ -84,10 +85,11 @@ footer {
     float: right;
     cursor: pointer;
 }
+/*Home Section Styling*/
 .home {
     position: relative;
     width: 100%;
-    height: 100vh; /* Full-screen height */
+    height: 100vh;
     overflow: hidden;
     background-position: center;
 }
@@ -202,11 +204,12 @@ button:hover {
         height: 50vh;
     }
 }
+/*Map Styling of Contact Us Section*/
 .map-container {
     position: relative;
     overflow: hidden;
     width: 100%;
-    padding-top: 56.25%; /* 16:9 Aspect Ratio */
+    padding-top: 56.25%;
 }
 
 .map-container iframe {
